--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,22 +1,36 @@
-name: Run Python Script
+name: Run Python Script and Commit Result
 
 on:
   workflow_dispatch:   # 手動執行
   schedule:
-    - cron: "0 0 * * *"   # 每天 UTC 0 點自動執行 (台灣早上 8 點)
+    - cron: "0 0 * * *"  # 每天 UTC 0 點自動執行
 
 jobs:
-  run:
+  run-and-commit:
     runs-on: ubuntu-latest
     steps:
+      # 1. 取得 repo
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true   # 允許 commit 回 repo
 
+      # 2. 設定 Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
+      # 3. 執行 Python script
       - name: Run script
         run: python script.py
-        
+
+      # 4. 自動 commit & push 結果
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add output.txt
+          git commit -m "Update output.txt from GitHub Actions" || echo "No changes to commit"
+          git push
+          
