--- a/workflows/run.yml
+++ b/workflows/run.yml
@@ -1,21 +1,35 @@
-name: Run Python Script
+name: Run Python Script and Commit Result
 
 on:
   workflow_dispatch:   # 手動執行
   schedule:
-    - cron: "0 0 * * *"   # 每天 UTC 0 點自動執行 (台灣早上 8 點)
+    - cron: "0 0 * * *"  # 每天 UTC 0 點自動執行 (台灣早上 8 點)
 
 jobs:
-  run:
+  run-and-commit:
     runs-on: ubuntu-latest
     steps:
+      # 1️⃣ Checkout repo 並保留憑證
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
+      # 2️⃣ 設定 Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Run script
+      # 3️⃣ 執行 Python 程式
+      - name: Run Python script
         run: python script.py
+
+      # 4️⃣ Commit & Push output.txt
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add output.txt
+          git commit -m "Update output.txt from GitHub Actions" || echo "No changes to commit"
+          git push
