--- a/workflows/run.yml
+++ b/workflows/run.yml
@@ -1,13 +1,14 @@
 name: Run Python Script and Commit Result
 
 on:
-  workflow_dispatch:   # 手動執行
+  workflow_dispatch:      # 手動執行
   schedule:
-    - cron: "0 0 * * *"  # 每天 UTC 0 點自動執行 (台灣早上 8 點)
+    - cron: "0 0 * * *"  # 每天 UTC 0 點自動執行
 
 jobs:
   run-and-commit:
     runs-on: ubuntu-latest
+
     steps:
       # 1️⃣ Checkout repo 並保留憑證
       - name: Checkout code
