--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,32 +1,32 @@
 name: Run Python Script and Commit Result
 
 on:
-  workflow_dispatch:       # 手動觸發
-  schedule:                # 自動排程
-    - cron: "0 0 * * *"   # 每天 UTC 0 點執行
+  workflow_dispatch:
+  schedule:
+    - cron: "0 0 * * *"
+
+permissions:
+  contents: write   # ⭐ 關鍵：允許 Actions 寫入 repo
 
 jobs:
   run-and-commit:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo 並保留憑證
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           persist-credentials: true
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      # 2️⃣ 設定 Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # 3️⃣ 執行 Python 程式
       - name: Run Python script
         run: python script.py
 
-      # 4️⃣ Commit & Push output.txt
       - name: Commit and push changes
         run: |
           git config --local user.email "action@github.com"
