--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -27,7 +27,7 @@ jobs:
           pip install pytesseract Pillow requests gspread google-auth google-auth-oauthlib
 
       - name: Setup credentials
-        run: echo "${{ secrets.GCP_KEY }}" > service_account.json
+        run: echo '${{ secrets.GCP_KEY }}' > service_account.json
 
       - name: Run script
         run: python script.py
